@@ -25,6 +25,7 @@ package loci.visbio;
 
 import java.awt.Color;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
 import java.lang.reflect.InvocationTargetException;
 import loci.visbio.util.SplashScreen;
 
@@ -75,6 +76,14 @@ public class VisBio {
       VisBio.class.getResource("visbio-logo.png"),
       msg, new Color(255, 255, 220), new Color(255, 50, 50));
     ss.show();
+
+    // toggle window decoration mode via reflection
+    if ("true".equals(System.getProperty("visbio.decorateWindows"))) {
+      Class jf = Class.forName("javax.swing.JFrame");
+      Method m = jf.getMethod("setDefaultLookAndFeelDecorated",
+        new Class[] {boolean.class});
+      m.invoke(null, new Object[] {new Boolean(true)});
+    }
 
     // construct VisBio interface via reflection
     Class vb = Class.forName("loci.visbio.VisBioFrame");
