@@ -2,6 +2,9 @@ v3.00 final - Not yet released
 
 - ADDED: Data export: save a data object to a file series on disk
 - ADDED: Ability to download images from an OME database (OME image transform)
+- ADDED: Support for key/value pair command-line parameters
+
+- TWEAK: VisBio icon is now used instead of default Java cup icon
 
 - FIXED: Combo box width for Windows Look & Feel
 - FIXED: Lots of little bugfixes
